--- a/02-Challenge/Develop/index.html
+++ b/02-Challenge/Develop/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style2.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Accessibility Refactor Challenge</title>
   </head>
 
