added comments to html

--- a/02-Challenge/Develop/index.html
+++ b/02-Challenge/Develop/index.html
@@ -6,6 +6,7 @@
     <title>Accessibility Refactor Challenge</title>
   </head>
 
+  <!-- Added header + nav elements for better structure + correctly labelling -->
   <body>
     <header>
       <h1>Hori<span class="seo">seo</span>n</h1>
@@ -30,6 +31,7 @@
         id="search-engine-optimization"
         class="search-engine-optimization"
       >
+        <!-- Added alt tag to img's to describe the image + improve accesiblity (other devices, or if img isn't displayed) -->
         <img
           src="./assets/images/search-engine-optimization.jpg"
           alt="Search Engine Optimization"
