--- a/02-Challenge/Develop/index.html
+++ b/02-Challenge/Develop/index.html
@@ -8,7 +8,7 @@
 
   <!-- Added header + nav elements for better structure + correctly labelling -->
   <body>
-    <header>
+    <header ></header>>
       <h1>Hori<span class="seo">seo</span>n</h1>
       <nav>
         <ul>
@@ -26,6 +26,7 @@
         </ul>
       </nav>
     </header>
+    <div class="hero"></div>
     <main>
       <section
         id="search-engine-optimization"
